--- a/core/templates/components/common-layout-directives/navigation-bars/top-navigation-bar.directive.html
+++ b/core/templates/components/common-layout-directives/navigation-bars/top-navigation-bar.directive.html
@@ -49,6 +49,23 @@
           <li class="nav-item"> <a ng-keydown="$ctrl.onMenuKeypress($event, 'aboutMenu', {tab: $ctrl.ACTION_CLOSE})" class="dropdown-item nav-link oppia-navbar-tab-content" href="https://oppiafoundation.org/volunteer" target="_blank" rel="noopener" translate="I18N_TOPNAV_GET_INVOLVED"></a></li>
         </ul>
       </li>
+      <li ng-class="{'open' : $ctrl.activeMenuName === 'aboutMenu'}" uib-dropdown ng-show="$ctrl.navElementsVisibilityStatus.I18N_TOPNAV_ABOUT" class="nav-item  oppia-navbar-clickable-dropdown protractor-test-about-oppia-list-item">
+        <a ng-if= "SHOW_CLASSROOM_CALLOUT" ng-keydown="$ctrl.onMenuKeypress($event, 'aboutMenu', {shiftTab: $ctrl.ACTION_CLOSE, enter: $ctrl.ACTION_OPEN})" class="nav-link oppia-navbar-tab dropdown-toggle"
+           role="menuitem"
+           aria-haspopup="true"
+           aria-expanded="false"
+           tabindex="0"
+           ng-mouseover="$ctrl.openSubmenu($event, 'aboutMenu')"
+           ng-mouseleave="$ctrl.closeSubmenuIfNotMobile($event)">
+          <span class="oppia-navbar-tab-content" translate="I18N_TOPNAV_CLASSROOM"></span>
+        </a>
+        <ul uib-dropdown-menu class="uib-dropdown-menu oppia-navbar-dropdown"
+            ng-mouseover="$ctrl.openSubmenu($event, 'aboutMenu')"
+            ng-mouseleave="$ctrl.closeSubmenuIfNotMobile($event)"
+            role="menu">
+          <li class="nav-item"> <a ng-keydown="$ctrl.onMenuKeypress($event, 'aboutMenu', {shiftTab: $ctrl.ACTION_CLOSE})" class="dropdown-item nav-link oppia-navbar-tab-content protractor-test-about-link" href="/classroom/Math" translate="I18N_TOPNAV_CLASSROOM_BASICMATHS"></a></li>
+        </ul>
+      </li>
       <li class="nav-item" ng-mouseover="$ctrl.blurNavigationLinks($event)" ng-show="$ctrl.navElementsVisibilityStatus.I18N_TOPNAV_DONATE">
         <div class="oppia-navbar-button-container">
           <a href="/donate"
